--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.4.0",
     "@material-ui/icons": "^3.0.1",
     "react": "^16.6.1",
+    "react-count-to": "^0.12.0",
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1"
   },
@@ -23,5 +24,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "https://pokeapi.co"
 }
