--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+ "homepage": "http://alttabs.github.io/pokedex-app",
   "name": "pokedex-app",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,8 @@
     "react-scripts": "2.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -26,5 +29,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "https://pokeapi.co"
+  "proxy": "https://pokeapi.co",
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
