upd: ListaPokemons array  map

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- "homepage": "http://alttabs.github.io/pokedex-app",
+  "homepage": "http://alttabs.github.io/Pokedex",
   "name": "pokedex-app",
   "version": "0.1.0",
   "private": true,
